samples/_failures_safe/1761374546_8462c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3d82ce6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c3d82ce6.c:154:13: error: expected declaration or statement at end of input
  154 |             tokens[token_count++] = token;
      |             ^~~~~~
./samples/SAFE/__tmp_c3d82ce6.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3d82ce6.c:154:13: error: expected declaration or statement at end of input
